--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ footer {
   display: none;
 }
 
+.start-menu-hidden {
+  transform: translateY(320px);
+}
+
 .boot {
   z-index: 999;
   position: absolute;
@@ -31,11 +35,10 @@ footer {
   width: 100vw;
   height: 100vh;
   animation: booting 5s forwards;
-}
-
-.boot img {
-  width: 100%;
-  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #a5c6de;
 }
 
 @keyframes booting {
@@ -54,6 +57,10 @@ footer {
 }
 
 .start-bar {
+  z-index: 2;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   height: 28px;
   background-color: #c0c0c0;
   border-top: 2px solid #f5f8f7;
@@ -62,12 +69,15 @@ footer {
 }
 
 .start-menu {
+  z-index: 1;
   position: absolute;
   bottom: 30px;
   width: 230px;
+  transition: all 0.3s;
 }
 
 .start-menu img {
+  z-index: 1;
   width: 100%;
 }
 
@@ -82,6 +92,13 @@ footer {
   border-left: 2px solid #f5f8f7;
   border-right: 2px solid #6a6a6a;
   border-bottom: 2px solid #6a6a6a;
+}
+
+.start-bar__button:active {
+  border-top: 2px solid #6a6a6a;
+  border-left: 2px solid #6a6a6a;
+  border-right: 2px solid #f5f8f7;
+  border-bottom: 2px solid #f5f8f7;
 }
 
 .start-bar__button button {
@@ -241,8 +258,17 @@ footer {
 
 .notepad-todos__header__icons img {
   width: 16px;
+  border-top: 2px solid #c1bbbb;
+  border-left: 2px solid #c1bbbb;
   border-right: 2px solid #333;
   border-bottom: 2px solid #333;
+}
+
+.notepad-todos__header__icons img:active {
+  border-top: 2px solid #333;
+  border-left: 2px solid #333;
+  border-right: 2px solid #c1bbbb;
+  border-bottom: 2px solid #c1bbbb;
 }
 
 .notepad-todos__main {
@@ -255,8 +281,15 @@ footer {
   border-left: 2px solid #383838;
 }
 
+.notepad-todos__main img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  margin: 24px auto 0px auto;
+}
+
 .notepad-todos__main .todos-form {
-  margin: 8px auto 0 auto;
+  margin: 16px auto 0 auto;
 }
 
 input {
